--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+openssl097 (0.9.7i-2) unstable; urgency=high
+
+  * Fix RSA Signature Forgery (CVE-2006-4339) using patch provided
+    by upstream.
+
+ -- Kurt Roeckx <kurt@roeckx.be>  Tue,  5 Sep 2006 19:59:47 +0000
+
 openssl097 (0.9.7i-1) unstable; urgency=high
 
   * New upstream release
