CVE-2007-5135: Fix off by one error in SSL_get_shared_ciphers(). (Closes: #444435)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+openssl (0.9.8c-4etch1) stable-security; urgency=low
+
+  * CVE-2007-5135: Fix off by one error in SSL_get_shared_ciphers().
+    (Closes: #444435)
+
+ -- Kurt Roeckx <kurt@roeckx.be>  Fri, 28 Sep 2007 19:57:00 +0200
+
 openssl (0.9.8c-4) unstable; urgency=low
 
   * Add German debconf translation.  Thanks to
