Apply patch from redhat for CVE-2007-4995.  This should also get DTLS in a working state.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+openssl (0.9.8c-4etch2) stable-security; urgency=low
+
+  * Apply patch from redhat for CVE-2007-4995.  This should also
+    get DTLS in a working state.
+
+ -- Kurt Roeckx <kurt@roeckx.be>  Sun, 06 Apr 2008 16:31:28 +0200
+
 openssl (0.9.8c-4etch1) stable-security; urgency=low
 
   * CVE-2007-5135: Fix off by one error in SSL_get_shared_ciphers().
