--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
-openssl (0.9.8g-16) unstable; urgency=high
+openssl (0.9.8g-15+lenny1) stable-security; urgency=low
 
   * Properly validate the length of an encoded BMPString and UniversalString
-    (CVE-2009-0590)  (Closes: #522002)
+    (CVE-2009-0590)
 
  -- Kurt Roeckx <kurt@roeckx.be>  Wed, 01 Apr 2009 22:04:53 +0200
 
