--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ openssl (0.9.8g-15+lenny2) stable-security; urgency=low
 
   * Fix "DTLS record buffer limitation bug." (CVE-2009-1377)
   * Fix "DTLS fragment handling" (CVE-2009-1378)
+  * Fix "DTLS use after free" (CVE-2009-1379)
 
- -- Kurt Roeckx <kurt@roeckx.be>  Mon, 01 Jun 2009 14:39:43 +0200
+ -- Kurt Roeckx <kurt@roeckx.be>  Mon, 01 Jun 2009 14:56:56 +0200
 
 openssl (0.9.8g-15+lenny1) stable-security; urgency=low
 
