--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ openssl (0.9.8g-15+lenny3) stable-security; urgency=low
 
   * Fix DoS via a DTLS ChangeCipherSpec packet that occurs before ClientHello
     (CVE-2009-1386)
+  * Fix DoS via an out-of-sequence DTLS handshake message (CVE-2009-1387)
 
  -- Kurt Roeckx <kurt@roeckx.be>  Mon, 08 Jun 2009 19:40:22 +0200
 
