--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ openssl (0.9.8c-4etch7) oldstable-security; urgency=low
 
   * Fix DoS via a DTLS ChangeCipherSpec packet that occurs before ClientHello
     (CVE-2009-1386)
+  * Fix DoS via an out-of-sequence DTLS handshake message (CVE-2009-1387)
 
  -- Kurt Roeckx <kurt@roeckx.be>  Mon, 08 Jun 2009 20:07:31 +0200
 
