--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openssl (0.9.8c-4etch8) oldstable-security; urgency=low
+
+  * Remove MD2 from digest algorithm table.  (CVE-2009-2409) (Closes: #539899)
+
+ -- Kurt Roeckx <kurt@roeckx.be>  Tue, 11 Aug 2009 23:00:55 +0200
+
 openssl (0.9.8c-4etch7) oldstable-security; urgency=low
 
   * Fix DoS via a DTLS ChangeCipherSpec packet that occurs before ClientHello
